force-app/main/default/objects/PSO__c/PSO__c.object-meta.xml
<CustomObject>
    <label>Legacy PSO</label>
    <nameField>
        <displayFormat>PSO-{0000000}</displayFormat>
        <label>PSO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy PSOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>