force-app/main/default/objects/PSO__c/fields/Assigned_FE__c.field-meta.xml
<CustomField>
    <fullName>Assigned_FE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned FE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PSOs</relationshipName>
    <type>Lookup</type>
</CustomField>