force-app/main/default/objects/PSO__c/fields/Assigned_Field_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Field_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Field Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PSOs2</relationshipName>
    <type>Lookup</type>
</CustomField>