force-app/main/default/objects/PSO__c/fields/Assigned_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PSOs1</relationshipName>
    <type>Lookup</type>
</CustomField>