force-app/main/default/objects/PSO__c/fields/Completion_date__c.field-meta.xml
<CustomField>
    <fullName>Completion_date__c</fullName>
    <label>Completion date</label>
    <type>Date</type>
</CustomField>