force-app/main/default/objects/PSO__c/fields/Days_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Days_Ordered__c</fullName>
    <formula>IF(Order_Line_Lookup__r.SBQQ__OrderedQuantity__c != null,Order_Line_Lookup__r.SBQQ__OrderedQuantity__c , Order_Line_Lookup__r.Quantity)</formula>
    <label>Days Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>