force-app/main/default/objects/PSO__c/fields/Implementation_Summary_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Summary_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Summary Submitted</label>
    <type>Checkbox</type>
</CustomField>