force-app/main/default/objects/PSO__c/fields/Install_Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Scheduled_Start_Date__c</fullName>
    <label>Install Scheduled Start Date</label>
    <type>Date</type>
</CustomField>