force-app/main/default/objects/PSO__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <formula>Order_Lookup__r.Opportunity.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity&apos;s Region</label>
    <type>Text</type>
</CustomField>