force-app/main/default/objects/PSO__c/fields/Order_Line_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Lookup</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>PSOs</relationshipLabel>
    <relationshipName>PSOs</relationshipName>
    <type>Lookup</type>
</CustomField>