force-app/main/default/objects/PSO__c/fields/Order_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Order_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Lookup</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>PSOs</relationshipLabel>
    <relationshipName>PSOs</relationshipName>
    <type>Lookup</type>
</CustomField>