force-app/main/default/objects/PSO__c/fields/Ordered_SKU__c.field-meta.xml
<CustomField>
    <fullName>Ordered_SKU__c</fullName>
    <formula>Order_Line_Lookup__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered SKU</label>
    <type>Text</type>
</CustomField>