force-app/main/default/objects/PSO__c/fields/Percentage_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Percentage_per_Month__c</fullName>
    <formula>TotalDaysCompleted__c /21.74</formula>
    <label>% per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>