force-app/main/default/objects/PSO__c/fields/Percentage_per_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Percentage_per_Quarter__c</fullName>
    <formula>TotalDaysCompleted__c /65.22</formula>
    <label>% per Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>