force-app/main/default/objects/PSO__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install (Paid)</fullName>
            </value>
            <value>
                <fullName>Install (Free)</fullName>
            </value>
            <value>
                <fullName>Consult (Paid)</fullName>
            </value>
            <value>
                <fullName>Consult (Free)</fullName>
            </value>
            <value>
                <fullName>POC / Pre-sales</fullName>
            </value>
            <value>
                <fullName>Enablement</fullName>
            </value>
            <value>
                <fullName>Break/Fix</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Partner Shadowing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>