force-app/main/default/objects/PSO__c/fields/Temperature_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gauge__c</fullName>
    <label>Temperature Gauge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>