force-app/main/default/objects/PSO__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <description>This field refers to Theatre field of Opportunity, associated via Order</description>
    <formula>Order_Lookup__r.Opportunity.Theatre__c</formula>
    <label>Theatre</label>
    <type>Text</type>
</CustomField>