force-app/main/default/objects/PSO__c/fields/Total_Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Completed__c</fullName>
    <label>Total Days Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>