force-app/main/default/objects/PSO__c/fields/TotalDaysCompleted__c.field-meta.xml
<CustomField>
    <fullName>TotalDaysCompleted__c</fullName>
    <label>Total Days Completed</label>
    <summarizedField>PSO_Time_Entry__c.Number_of_Days__c</summarizedField>
    <summaryForeignKey>PSO_Time_Entry__c.PSO_Lookup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>