force-app/main/default/objects/PSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ordered_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>